# topic-suggestor

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: email.rs  fetch.rs  fs.rs  main.rs  notify.rs
