[package]
name = "topic_suggestor"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
dotenv = "*"
uuid = { version = "*", features = ["v4"] }
cron = "0.12.0"
chrono = "0.4.26"
color-eyre = "0.6.2"
